# bicInventor

./: .cvsignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  epm-header.in
lib/: .cvsignore  Makefile.am  bicInventor.cc  bicInventor.h  inventorMincVolume.cc  inventorMincVolume.h
lib/bicInventor/: MincVolume.cc  MincVolume.h  object.cc  object.h  texture.cc
m4/: mni_REQUIRE_MNILIBS.m4
tools/: .cvsignore  Makefile.am  ParseArgv.3  ParseArgv.c  ParseArgv.h  bicobj2iv.cc  iv2bicobj.cc  mesh2iv.cc  meshmorph.cc
